# clion_dev

example01/: CMakeLists.txt  main.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glad/src/glad/: glad.h
libs/glfw-3.2/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw-3.2/examples/: Makefile  cmake_install.cmake
libs/glfw-3.2/src/: Makefile  cmake_install.cmake
libs/glfw-3.2/tests/: Makefile  cmake_install.cmake
